methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:2: error: '(' expected but identifier found.
  for i(<-1 to 3) {
      ^PictureMono2:13: error: illegal start of simple expression
}
^